[package]
authors = ["Gareth Evans <evans.g.p@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "f1test"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal"
version = "*"
# features = ["rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "f1test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
